namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: project
---
apiVersion: v1
kind: Namespace
metadata:
    name: frontend
---
apiVersion: v1
kind: Namespace
metadata:
    name: observability
