services.yaml
apiVersion: v1
kind: Service
metadata:
    name: service-rabbit
    namespace: project
spec:
    selector:
        app: lab
    ports:
        - port: 8082
          targetPort: 5000
    type: ClusterIP
