ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: lab-ingress
    namespace: project
    annotations:
        kubernetes.io/ingress.class: "gloo"
spec:
    rules:
    - http:
        paths:
        - backend:
            serviceName: lab-service
            servicePort: 5000
