todo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: deployment-rabbit
    namespace: project
spec:
    replicas: 1
    selector:
        matchLabels:
            app: lab
    template:
        metadata:
            labels:
                app: lab
        spec:
            containers:
            - name: serverrabbit
              image: rabbitmq:3-management
              ports:
                - containerPort: 5672
                - containerPort: 15672
            - name: servergolang
              image: brygle/goserver6
              ports:
                - containerPort: 5000
            - name: serverpython
              image: brygle/pyserver7
---
apiVersion: v1
kind: Service
metadata:
    name: service-rabbit
    namespace: project
spec:
    selector:
        app: lab
    ports:
        - port: 8082
          targetPort: 5000
    type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-rabbit
    namespace: project
    annotations:
        kubernetes.io/ingress.class: gloo
spec:
    rules:
    - http:
          paths:
          - path: /.*
            backend:
                serviceName: service-rabbit
                servicePort: 8082
